@@ -249,7 +249,7 @@ class Config {
       this.logger = logging.createLogger(this.logLevel)
     }
 
-    normalize(this)
+    normalize(this, this.logger)
 
     if (typeof this.transport !== 'function') {
       this.transport = function httpTransport (conf, agent) {
@@ -317,7 +317,7 @@ class Config {
           }
 
           if (Object.keys(conf).length > 0) {
-            normalize(conf)
+            normalize(conf, agent.logger)
 
             for (const [key, value] of Object.entries(conf)) {
               const validator = VALIDATORS[key]
@@ -412,16 +412,16 @@ function readEnv () {
   return opts
 }
 
-function normalize (opts) {
+function normalize (opts, logger) {
   normalizeKeyValuePairs(opts)
   normalizeNumbers(opts)
   normalizeBytes(opts)
   normalizeArrays(opts)
   normalizeTime(opts)
-  normalizeBools(opts)
+  normalizeBools(opts, logger)
   normalizeIgnoreOptions(opts)
   normalizeSanitizeFieldNames(opts)
-  normalizeCloudProvider(opts)
+  normalizeCloudProvider(opts, logger)
   truncateOptions(opts)
 }
 
@@ -435,15 +435,13 @@ function normalizeSanitizeFieldNames (opts) {
   }
 }
 
-function normalizeCloudProvider (opts) {
-  const allowedValues = ['auto', 'gcp', 'azure', 'aws', 'none']
-  if (allowedValues.indexOf(opts.cloudProvider) === -1) {
-    opts.cloudProvider = 'auto'
-    if (opts.logger) {
-      opts.logger.warn(
-        'Unexpected cloudProvider value %s, changing to auto',
-        opts.cloudProvider
-      )
+function normalizeCloudProvider (opts, logger) {
+  if ('cloudProvider' in opts) {
+    const allowedValues = ['auto', 'gcp', 'azure', 'aws', 'none']
+    if (allowedValues.indexOf(opts.cloudProvider) === -1) {
+      logger.warn('Invalid "cloudProvider" config value %s, falling back to default %s',
+        opts.cloudProvider, DEFAULTS.cloudProvider)
+      opts.cloudProvider = DEFAULTS.cloudProvider
     }
   }
 }
@@ -539,9 +537,9 @@ function normalizeKeyValuePairs (opts) {
   }
 }
 
-function normalizeBools (opts) {
+function normalizeBools (opts, logger) {
   for (const key of BOOL_OPTS) {
-    if (key in opts) opts[key] = strictBool(opts.logger, key, opts[key])
+    if (key in opts) opts[key] = strictBool(logger, key, opts[key])
   }
 }
 
