@@ -39,6 +39,8 @@ Notes:
 [float]
 ===== Bug fixes
 
+* fix: It was possible for fetching central config to result in the
+  `cloudProvider` config value being reset to its default. {issues}1976[#1976]
 * fix: fixes bug where tedious could crash the agent on bulk inserts {pull}1935[#1935] +
   Reported https://discuss.elastic.co/t/apm-agent-crashes-nodejs-after-reporting-exception-in-tedious-instrumentation-code/259851[via the forum].
   The error symptom was: `Cannot read property 'statement' of undefined`
